update youtube_name to youtube_display_name and quick css fix for left col collapsing

--- a/src/components/YoutubeSearchResult/YoutubeSearchResult.css
+++ b/src/components/YoutubeSearchResult/YoutubeSearchResult.css
@@ -8,6 +8,7 @@
 .youtube-search-result .left-col {
   flex: 1;
   position: relative;
+  min-width:150px;
 }
 
 .youtube-search-result .left-col span {
